test/preprocessor/invalid/bad-else.glsl
#if 1
#else
#else
#endif

#else