test/preprocessor/invalid/bad-else.glsl.err.ref
Error in preprocessor/invalid/bad-else.glsl(3, 6): Only one #else directive allowed inside a condition
Error in preprocessor/invalid/bad-else.glsl(6, 6): #else outside of an #if
